@@ -218,7 +218,7 @@ public class FetchSessionHandlerTest {
             FetchResponse resp = FetchResponse.of(Errors.NONE, 0, INVALID_SESSION_ID,
                 respMap(new RespEntry("foo", 0, fooId, 0, 0),
                         new RespEntry("foo", 1, fooId, 0, 0)),
-                    Collections.emptyList());
+                    List.of());
             handler.handleResponse(resp, version);
 
             FetchSessionHandler.Builder builder2 = handler.newBuilder();
@@ -260,7 +260,7 @@ public class FetchSessionHandlerTest {
             FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123,
                 respMap(new RespEntry("foo", 0, fooId, 10, 20),
                         new RespEntry("foo", 1, fooId, 10, 20)),
-                    Collections.emptyList());
+                    List.of());
             handler.handleResponse(resp, version);
 
             // Test an incremental fetch request which adds one partition and modifies another.
@@ -283,7 +283,7 @@ public class FetchSessionHandlerTest {
 
             FetchResponse resp2 = FetchResponse.of(Errors.NONE, 0, 123,
                 respMap(new RespEntry("foo", 1, fooId, 20, 20)),
-                    Collections.emptyList());
+                    List.of());
             handler.handleResponse(resp2, version);
 
             // Skip building a new request.  Test that handling an invalid fetch session epoch response results
@@ -350,7 +350,7 @@ public class FetchSessionHandlerTest {
                 respMap(new RespEntry("foo", 0, fooId, 10, 20),
                         new RespEntry("foo", 1, fooId, 10, 20),
                         new RespEntry("bar", 0, barId, 10, 20)),
-                    Collections.emptyList());
+                    List.of());
             handler.handleResponse(resp, version);
 
             // Test an incremental fetch request which removes two partitions.
@@ -371,8 +371,7 @@ public class FetchSessionHandlerTest {
             // A FETCH_SESSION_ID_NOT_FOUND response triggers us to close the session.
             // The next request is a session establishing FULL request.
             FetchResponse resp2 = FetchResponse.of(Errors.FETCH_SESSION_ID_NOT_FOUND, 0, INVALID_SESSION_ID,
-                respMap(),
-                    Collections.emptyList());
+                respMap(), List.of());
             handler.handleResponse(resp2, version);
 
             FetchSessionHandler.Builder builder3 = handler.newBuilder();
@@ -405,7 +404,7 @@ public class FetchSessionHandlerTest {
 
             FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123,
                     respMap(new RespEntry("foo", 0, Uuid.ZERO_UUID, 10, 20)),
-                    Collections.emptyList());
+                    List.of());
             handler.handleResponse(resp, (short) 12);
 
             // Try to add a topic ID to an already existing topic partition (0) or a new partition (1) in the session.
@@ -443,7 +442,7 @@ public class FetchSessionHandlerTest {
 
             FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123,
                     respMap(new RespEntry("foo", 0, fooId, 10, 20)),
-                    Collections.emptyList());
+                    List.of());
             handler.handleResponse(resp, ApiKeys.FETCH.latestVersion());
 
             // Try to remove a topic ID from an existing topic partition (0) or add a new topic partition (1) without an ID.
@@ -482,8 +481,7 @@ public class FetchSessionHandlerTest {
         assertTrue(data.metadata().isFull());
         assertEquals(startsWithTopicIds, data.canUseTopicIds());
 
-        FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123, respMap(new RespEntry("foo", 0, topicId1, 10, 20)),
-                Collections.emptyList());
+        FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123, respMap(new RespEntry("foo", 0, topicId1, 10, 20)), List.of());
         short version = startsWithTopicIds ? ApiKeys.FETCH.latestVersion() : 12;
         handler.handleResponse(resp, version);
 
@@ -556,8 +554,7 @@ public class FetchSessionHandlerTest {
         assertEquals(startsWithTopicIds, data.canUseTopicIds());
 
         FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123,
-                respMap(new RespEntry("foo", 0, fooId, 10, 20)),
-                Collections.emptyList());
+                respMap(new RespEntry("foo", 0, fooId, 10, 20)), List.of());
         handler.handleResponse(resp, responseVersion);
 
         // Re-add the first partition. Then add a partition with opposite ID usage.
@@ -593,7 +590,7 @@ public class FetchSessionHandlerTest {
 
         FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123,
                 respMap(new RespEntry("foo", 0, topicId, 10, 20)),
-                Collections.emptyList());
+                List.of());
         handler.handleResponse(resp, responseVersion);
 
         // Remove the topic from the session
@@ -621,7 +618,7 @@ public class FetchSessionHandlerTest {
 
         FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123,
                 respMap(new RespEntry("foo", 0, topicId, 10, 20)),
-                Collections.emptyList());
+                List.of());
         handler.handleResponse(resp, ApiKeys.FETCH.latestVersion());
 
         // Remove the partition from the session. Return a session ID as though the session is still open.
@@ -631,7 +628,7 @@ public class FetchSessionHandlerTest {
                 data2.toSend(), data2.sessionPartitions());
         FetchResponse resp2 = FetchResponse.of(Errors.NONE, 0, 123,
                 new LinkedHashMap<>(),
-                Collections.emptyList());
+                List.of());
         handler.handleResponse(resp2, ApiKeys.FETCH.latestVersion());
 
         // After the topic is removed, add a recreated topic with a new ID.
@@ -664,7 +661,7 @@ public class FetchSessionHandlerTest {
                 respMap(new RespEntry("foo", 0, fooId, 10, 20),
                         new RespEntry("foo", 1, fooId, 10, 20),
                         new RespEntry("bar", 0, barId, 10, 20)),
-                    Collections.emptyList());
+                    List.of());
             String issue = handler.verifyFullFetchResponsePartitions(resp1.responseData(topicNames, version).keySet(),
                     resp1.topicIds(), version);
             assertTrue(issue.contains("extraPartitions="));
@@ -678,14 +675,14 @@ public class FetchSessionHandlerTest {
                 respMap(new RespEntry("foo", 0, fooId, 10, 20),
                         new RespEntry("foo", 1, fooId, 10, 20),
                         new RespEntry("bar", 0, barId, 10, 20)),
-                    Collections.emptyList());
+                    List.of());
             String issue2 = handler.verifyFullFetchResponsePartitions(resp2.responseData(topicNames, version).keySet(),
                     resp2.topicIds(), version);
             assertNull(issue2);
             FetchResponse resp3 = FetchResponse.of(Errors.NONE, 0, INVALID_SESSION_ID,
                 respMap(new RespEntry("foo", 0, fooId, 10, 20),
                         new RespEntry("foo", 1, fooId, 10, 20)),
-                    Collections.emptyList());
+                    List.of());
             String issue3 = handler.verifyFullFetchResponsePartitions(resp3.responseData(topicNames, version).keySet(),
                     resp3.topicIds(), version);
             assertFalse(issue3.contains("extraPartitions="));
@@ -705,7 +702,7 @@ public class FetchSessionHandlerTest {
             respMap(new RespEntry("foo", 0, topicIds.get("foo"), 10, 20),
                     new RespEntry("extra2", 1, topicIds.get("extra2"), 10, 20),
                     new RespEntry("bar", 0, topicIds.get("bar"), 10, 20)),
-                Collections.emptyList());
+                List.of());
         String issue = handler.verifyFullFetchResponsePartitions(resp1.responseData(topicNames, ApiKeys.FETCH.latestVersion()).keySet(),
                 resp1.topicIds(), ApiKeys.FETCH.latestVersion());
         assertTrue(issue.contains("extraPartitions="));
@@ -720,7 +717,7 @@ public class FetchSessionHandlerTest {
             respMap(new RespEntry("foo", 0, topicIds.get("foo"), 10, 20),
                     new RespEntry("extra2", 1, topicIds.get("extra2"), 10, 20),
                     new RespEntry("bar", 0, topicIds.get("bar"), 10, 20)),
-                Collections.emptyList());
+                List.of());
         String issue2 = handler.verifyFullFetchResponsePartitions(resp2.responseData(topicNames, ApiKeys.FETCH.latestVersion()).keySet(),
                 resp2.topicIds(), ApiKeys.FETCH.latestVersion());
         assertTrue(issue2.contains("extraPartitions="));
@@ -728,7 +725,7 @@ public class FetchSessionHandlerTest {
         FetchResponse resp3 = FetchResponse.of(Errors.NONE, 0, INVALID_SESSION_ID,
             respMap(new RespEntry("foo", 0, topicIds.get("foo"), 10, 20),
                     new RespEntry("bar", 0, topicIds.get("bar"), 10, 20)),
-                Collections.emptyList());
+                List.of());
         String issue3 = handler.verifyFullFetchResponsePartitions(resp3.responseData(topicNames, ApiKeys.FETCH.latestVersion()).keySet(),
                 resp3.topicIds(), ApiKeys.FETCH.latestVersion());
         assertNull(issue3);
@@ -753,7 +750,7 @@ public class FetchSessionHandlerTest {
         FetchResponse resp = FetchResponse.of(Errors.NONE, 0, 123,
             respMap(new RespEntry("foo", 0, topicIds.get("foo"), 10, 20),
                     new RespEntry("foo", 1, topicIds.get("foo"), 10, 20)),
-                Collections.emptyList());
+                List.of());
         handler.handleResponse(resp, ApiKeys.FETCH.latestVersion());
 
         // Test an incremental fetch request which adds an ID unknown to the broker.
@@ -769,7 +766,7 @@ public class FetchSessionHandlerTest {
         // Return and handle a response with a top level error
         FetchResponse resp2 = FetchResponse.of(Errors.UNKNOWN_TOPIC_ID, 0, 123,
             respMap(new RespEntry("unknown", 0, Uuid.randomUuid(), Errors.UNKNOWN_TOPIC_ID)),
-                Collections.emptyList());
+                List.of());
         assertFalse(handler.handleResponse(resp2, ApiKeys.FETCH.latestVersion()));
 
         // Ensure we start with a new epoch. This will close the session in the next request.
